[package]
name = "seredies"
version = "0.1.0"
authors = ["Nathan West <Lucretiel@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayvec = "0.7.2"
lazy_format = "2.0.0"
memchr = "2.5.0"
serde = { version = "1.0.118", default-features = false, features = [
    "derive",
    "std",
] }
serde_bytes = { version = "0.11.9", default-features = false }
thiserror = "1.0.32"

[dev-dependencies]
cool_asserts = "2.0.3"
serde_test = "1.0.163"
itertools = "0.10.3"
