[package]
name = "seredies"
version = "1.0.1"
authors = ["Nathan West <Lucretiel@gmail.com>"]
edition = "2021"

description = "An implementation of the Redis Protocol as a serde (de)serializer"
readme = "README.md"
repository = "https://github.com/Lucretiel/seredies"
license = "MPL-2.0"
keywords = ["serde", "redis"]
categories = ["encoding"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayvec = "0.7.2"
lazy_format = "2.0.0"
memchr = "2.5.0"
paste = { version = "1.0.12", default-features = false }
serde = { version = "1.0.118", default-features = false, features = ["std"] }
serde_bytes = { version = "0.11.9", default-features = false }
thiserror = "1.0.32"

[dev-dependencies]
serde = { version = "1.0.118", features = ["derive"], default-features = false }
cool_asserts = "2.0.3"
serde_test = "1.0.163"
itertools = "0.10.3"
tempfile = "3.5.0"
